// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`panel.dom createPanelNode Create panel node with not required options 1`] = `
<div
  class="panel locked hidden"
  id="test_id"
>
  <header
    class="panel__header"
  >
    
      
    <a
      class="panel__dragLink "
    >
      
        ✣
      
    </a>
    
      
    <p
      class="panel__title"
      title="Test title"
    >
      
        
      Test title
      <!---0.411551%-->
      
      
    </p>
    
      
    <a
      class="panel__collapseLink"
    >
      
        
      ▷
      <!---0.411551%-->
      
      
    </a>
    
    
  </header>
  <main
    class="panel__main hidden"
  >
    
    
  </main>
</div>
`;

exports[`panel.dom createPanelNode Create panel node with required parameters 1`] = `
<div
  class="panel"
  id="test_id"
>
  <header
    class="panel__header"
  >
    
      
    <a
      class="panel__dragLink hidden"
    >
      
        ✣
      
    </a>
    
      
    <p
      class="panel__title"
      title="Test title"
    >
      
        
      Test title
      <!---0.411551%-->
      
      
    </p>
    
      
    <a
      class="panel__collapseLink"
    >
      
        
      ▽
      <!---0.411551%-->
      
      
    </a>
    
    
  </header>
  <main
    class="panel__main"
  >
    
    
  </main>
</div>
`;
